--- a/Day-1/Basics.html
+++ b/Day-1/Basics.html
@@ -11,7 +11,7 @@
 
   <figure style="text-align: center">
     <img
-      src="../Images/pexels-renantaglia-31666547.jpg"
+      src="./Images/pexels-renantaglia-31666547.jpg"
       alt="flower_pic"
       width="200"
     />
