--- a/Day-3/transition.html
+++ b/Day-3/transition.html
@@ -11,31 +11,29 @@
 
     <div class="flex size-full flex-col items-center justify-center border-2 border-amber-300">
       <button
-        class="m-2 cursor-pointer rounded-lg bg-green-500 px-7 py-2 font-bold text-white transition duration-500 hover:bg-red-400 animate-spin"
+        class="m-2 animate-spin cursor-pointer rounded-lg bg-green-500 px-7 py-2 font-bold text-white transition duration-500 hover:bg-red-400"
       >
         1
       </button>
       <button
-        class="m-2 cursor-pointer rounded-lg bg-green-500 px-7 py-2 font-bold text-white transitiohover:opacity-5 hover:bg-red-400 animate-ping duration-75"
+        class="transitiohover:opacity-5 m-2 animate-ping cursor-pointer rounded-lg bg-green-500 px-7 py-2 font-bold text-white duration-75 hover:bg-red-400"
       >
         2
       </button>
-    
+
       <button
-        class="m-2 cursor-pointer rounded-lg bg-green-500 px-7 py-2 font-bold text-white transition duration-500 hover:bg-red-400 hover:opacity-15 animate-bounce"
+        class="m-2 animate-bounce cursor-pointer rounded-lg bg-green-500 px-7 py-2 font-bold text-white transition duration-500 hover:bg-red-400 hover:opacity-15"
       >
         3
       </button>
       <button
-        class="m-2 cursor-pointer rounded-lg bg-green-500 px-7 py-2 font-bold text-white transition duration-500 hover:bg-red-400 animate-pulse"
+        class="m-2 animate-pulse cursor-pointer rounded-lg bg-green-500 px-7 py-2 font-bold text-white transition duration-500 hover:bg-red-400"
       >
         4
       </button>
-      <button
-        class="size-12"
-      >
-       <img src="./assets/images/spinner.svg" class="animate-spin  ">
-       <img src="./assets/images/spinner-of-dots.png" class="my-3 animate-spin  ">
+      <button class="size-12">
+        <img src="./assets/images/spinner.svg" class="animate-spin" />
+        <img src="./assets/images/spinner-of-dots.png" class="my-3 animate-spin" />
       </button>
     </div>
   </body>
