--- a/Day-4/skew,scale,rotation.html
+++ b/Day-4/skew,scale,rotation.html
@@ -10,20 +10,32 @@
     <!-- rotation and scale on hover-->
     <div class="flex min-h-screen flex-col items-center justify-center">
       <button
-        class="spin cursor-pointer rounded-lg m-6 bg-green-500 px-7 py-2 font-bold text-white duration-500  hover:scale-125 hover:bg-red-400"
+        class="spin m-6 cursor-pointer rounded-lg bg-green-500 px-7 py-2 font-bold text-white duration-500 hover:scale-125 hover:bg-red-400"
       >
         Know Me!
       </button>
       <button
-        class="spin cursor-pointer rounded-lg m-6 bg-green-500 px-7 py-2 font-bold text-white duration-2000 hover:rotate-x-360 hover:rotate-y-360 hover:scale-200 hover:rotate-z-360 hover:bg-red-400"
+        class="spin m-6 cursor-pointer rounded-lg bg-green-500 px-7 py-2 font-bold text-white duration-1000 hover:scale-200 hover:rotate-x-360 hover:rotate-y-360 hover:rotate-z-360 hover:bg-red-400"
       >
         Know Me!
       </button>
       <!-- image scale -->
-       <img src="../Day-3/assets/images/avatar-jessica.jpeg" alt="image" class="hover:scale-105 rounded-xl">
-       <!-- skew -->
-       <img src="../Day-3/assets/images/avatar-jessica.jpeg" alt="image" class="scale-96 rounded-xl">
-
+      <img
+        src="../Day-3/assets/images/avatar-jessica.jpeg"
+        alt="image"
+        class="m-6 rounded-xl hover:scale-105"
+      />
+      <button
+        class="spin m-6 origin-right cursor-pointer rounded-lg bg-green-500 px-7 py-2 font-bold text-white duration-500 hover:scale-200 hover:rotate-45 hover:bg-red-400"
+      >
+        Know Me!
+      </button>
+      <!-- skew -->
+      <img
+        src="../Day-3/assets/images/avatar-jessica.jpeg"
+        alt="image"
+        class="rounded-xl duration-500 hover:skew-x-12"
+      />
     </div>
   </body>
 </html>
